tests/ui/type-alias-impl-trait/wf_check_closures.stderr
error[E0277]: the trait bound `B: Bar` is not satisfied
  --> $DIR/wf_check_closures.rs:11:5
   |
LL |     move || bar.bar()
   |     ^^^^^^^^^^^^^^^^^ the trait `Bar` is not implemented for `B`
   |
note: required by a bound in `foo`
  --> $DIR/wf_check_closures.rs:10:11
   |
LL | fn foo<B: Bar>(bar: B) -> FooFn<B> {
   |           ^^^ required by this bound in `foo`
help: consider restricting type parameter `B` with trait `Bar`
   |
LL | type FooFn<B: Bar> = impl FnOnce();
   |             +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
